--- a/config-sample.json
+++ b/config-sample.json
@@ -15,12 +15,12 @@
     "segment_max_retry": 8,
     "add_bangumi_name_to_video_filename": true,
     "add_resolution_to_video_filename": true,
-    "customized_video_filename_prefix": "【動畫瘋】",
+    "customized_video_filename_prefix": "",
     "customized_bangumi_name_suffix": "",
     "customized_video_filename_suffix": "",
     "video_filename_extension": "mp4",
     "zerofill": 1,
-    "ua": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.96 Safari/537.36",
+    "ua": "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:101.0) Gecko/20100101 Firefox/101.0",
     "use_proxy": false,
     "proxy": "http://user:passwd@example.com:1000",
     "upload_to_server": false,
@@ -44,15 +44,26 @@
             "http://127.0.0.1:5700/send_group_msg?access_token=abc&group_id=87654321"
         ]
     },
+    "telebot_notify": false,
+    "telebot_token": "",
+    "telebot_chat_id": "",
+    "telebot_use_chat_id": false,
+    "discord_notify": false,
+    "discord_token": "",
+    "plex_refresh": false,
+    "plex_url": "",
+    "plex_token": "",
+    "plex_section": "",
     "faststart_movflags": false,
     "audio_language": false,
     "use_mobile_api": false,
     "danmu": false,
+    "danmu_ban_words": [],
     "check_latest_version": true,
     "read_sn_list_when_checking_update": true,
     "read_config_when_checking_update": true,
     "ads_time": 25,
-	"mobile_ads_time": 3,
+    "mobile_ads_time": 3,
     "use_dashboard": true,
     "dashboard": {
         "host": "127.0.0.1",
@@ -64,6 +75,6 @@
     },
     "save_logs": true,
     "quantity_of_logs": 7,
-    "config_version": 13.0,
+    "config_version": 16,
     "database_version": 2.0
 }
