--- a/config-sample.json
+++ b/config-sample.json
@@ -46,10 +46,11 @@
     },
     "telebot_notify": false,
     "telebot_token": "",
-    "telebot_chat_id": "",
     "telebot_use_chat_id": false,
+    "telebot_chat_id": "",
     "discord_notify": false,
     "discord_token": "",
+    "discord_channel_id": "",
     "plex_refresh": false,
     "plex_url": "",
     "plex_token": "",
